--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 	<meta charset=utf-8 />
-	<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui' />
 	<title>Límites municipales COVID-19</title>
-	
+	<!-- leafleat  -->
 	<script src='http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet-src.js'></script>
 	<link href='http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css' rel='stylesheet' />
+	
+	<!-- search geojson -->
+	<script src='leaflet-search-master\src\leaflet-search.js'></script>
+	<link href='leaflet-search-master\src\leaflet-search.css' rel='stylesheet' />
 	
 	<link rel="stylesheet" href="map.css">
 </head>
