--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<script src='http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet-src.js'></script>
 	<link href='http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css' rel='stylesheet' />
 	
+	<!-- json datos -->
+	<script type="text/javascript" src="map_data.js"></script>
+	
 	<!-- search geojson -->
 	<script src='leaflet-search-master\src\leaflet-search.js'></script>
 	<link href='leaflet-search-master\src\leaflet-search.css' rel='stylesheet' />
@@ -15,8 +18,6 @@
 </head>
 
 <body>
-	<script type="text/javascript" src="map_data.js"></script>
-
 	<div id='map'></div>
 
 	<script src="map.js"></script>
