--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
 	<meta charset=utf-8 />
 	<title>Límites municipales COVID-19</title>
-	<!-- leafleat  -->
-	<script src='http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet-src.js'></script>
-	<link href='http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css' rel='stylesheet' />
+	
+	<!-- <!-- leafleat  --> -->
+	<!-- <script src='http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet-src.js'></script> -->
+	<!-- <link href='http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css' rel='stylesheet' /> -->
+	
+	<!-- leafleat otro -->
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" 
+		integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ==" crossorigin=""/>		
+	<script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
+		integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log==" crossorigin=""></script>
 	
 	<!-- json datos -->
 	<script type="text/javascript" src="map_data.js"></script>
