--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
 		integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log==" crossorigin=""></script>
 	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximumscale=1.0, user-scalable=no" />
+	
 	<!-- json datos -->
 	<script type="text/javascript" src="map_data.js"></script>
 	
