--- a/index.html
+++ b/index.html
@@ -3,32 +3,25 @@
 <head>
 	<meta charset=utf-8 />
 	<title>Límites municipales COVID-19</title>
-	
-	<!-- <!-- leafleat  --> -->
-	<!-- <script src='http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet-src.js'></script> -->
-	<!-- <link href='http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css' rel='stylesheet' /> -->
-	
-	<!-- leafleat otro -->
+	<!-- leafleat -->
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" 
 		integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ==" crossorigin=""/>		
 	<script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
 		integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log==" crossorigin=""></script>
-	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximumscale=1.0, user-scalable=no" />
-	
 	<!-- json datos -->
 	<script type="text/javascript" src="map_data.js"></script>
-	
 	<!-- search geojson -->
 	<script src='leaflet-search-master\src\leaflet-search.js'></script>
 	<link href='leaflet-search-master\src\leaflet-search.css' rel='stylesheet' />
 	
 	<link rel="stylesheet" href="map.css">
 </head>
-
 <body>
 	<div id='map'></div>
-
+	<button id="baixar" onclick="baixarr()">Download KML</button>
 	<script src="map.js"></script>
+	<!-- to kml -->
+	<script src="tokml_file.js"></script>
 </body>
 </html>
